<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/app_bg"
    app:cardCornerRadius="30dp"
    android:layout_marginHorizontal="20dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/select_language"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/english"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_hindi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hindi"/>


    </LinearLayout>


</androidx.cardview.widget.CardView>