<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@color/bgcolor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

    <TextView
        android:id="@+id/txt_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register Yourself"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/rolechoosetext"
        android:layout_below="@+id/txt_reg"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_a"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_below="@+id/rolechoosetext"
        android:id="@+id/img_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/img_group"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/group"/>

    <ImageView
        android:id="@+id/img_farmer"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/farmer"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_expert"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/expert"
        android:visibility="gone"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_role_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_layout"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >


        <RadioButton
            android:id="@+id/farmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farmer"
            android:textSize="17sp"
            android:padding="10dp"
            />

        <RadioButton
            android:id="@+id/expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expert"
            android:textSize="17sp"
            android:padding="10dp"
             />

    </RadioGroup>

    <RelativeLayout
        android:id="@+id/mobileReglayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_role_group"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_reg_mob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
       
            android:text="@string/register_with"

            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_reg_mob"
            android:layout_margin="10dp"
            android:weightSum="100">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50">

          <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/btn_reg_mobile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="50"
                    android:src="@drawable/mobile"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="2dp" />
<!-- =======
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_centerHorizontal="true"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp"
            android:id="@+id/btn_reg_mobile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/mobile"/> -->


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/mobile"
                    android:textSize="18sp"

                    android:layout_below="@id/btn_reg_mobile"
                    android:layout_centerHorizontal="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/btn_reg_email"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="50"
                    android:src="@drawable/gmail"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18sp"

                    android:layout_below="@id/btn_reg_email"
                    android:layout_centerHorizontal="true"
                 />

            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dataLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_role_group"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"


            
            android:hint="@string/name"
      

            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:hint="Name"
            android:padding="0dp"
            app:hintEnabled="true"
            app:placeholderText="Enter Your Name"
            app:startIconDrawable="@drawable/vector_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_below="@+id/user_name"

            android:hint="@string/email"

            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="Email"
            android:padding="0dp"
            app:hintEnabled="true"
            app:placeholderText="Enter Your Email"
            app:startIconDrawable="@drawable/vector_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextMobile"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_below="@+id/TextTextEmailAddress2"
            
          
            android:hint="@string/mobile"
          

            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
        
            android:padding="0dp"
            app:hintEnabled="true"
            app:placeholderText="Enter Your Mobile"
            app:startIconDrawable="@drawable/vector_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_below="@+id/TextMobile"

         
            android:hint="@string/password"

            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
           
            android:padding="0dp"
            app:hintEnabled="true"
            app:placeholderText="Enter Your Password"
            app:startIconDrawable="@drawable/vector_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextTextConfirmPassword2"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_below="@+id/TextTextPassword2"

          
            android:hint="@string/confirm_password"
         

            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp
            android:padding="0dp"
            app:hintEnabled="true"
            app:placeholderText="Repeat Your Password"
            app:startIconDrawable="@drawable/vector_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextConfirmPassword2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/selectcroplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_role_group"
        android:layout_marginTop="20dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/grpx_crop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <ImageView
                    android:id="@+id/img_tomato"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/tomato" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_tomato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/img_tomato"

                    android:text="@string/tomato"

                    android:layout_centerHorizontal="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50">


                <ImageView
                    android:id="@+id/img_potato"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/potato" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_potato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_potato"
                    android:layout_centerHorizontal="true"
                    android:text="Potato" />


            </RelativeLayout>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittextothercroplauout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grpx_crop"
            android:layout_margin="30dp"
            android:hint="Others Please Specify"
            android:orientation="vertical"
            app:placeholderText="Other">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextothercrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationnaa"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_below="@+id/edittextothercroplauout"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"

            android:hint="Select State"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:placeholderText="Location">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:padding="15dp" />


        </com.google.android.material.textfield.TextInputLayout>





    </RelativeLayout>

    <Button
        android:layout_below="@+id/dataLayout"
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/next"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_below="@+id/selectcroplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_margin="20dp"
        android:visibility="gone">

        <Button

            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/back"
            android:layout_weight="50"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"

            />

        <Button

            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:layout_weight="50"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/already_registerd_login"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="italic"/>


</LinearLayout>
    </ScrollView>


</RelativeLayout>